refactor: enchance kafka resource management